--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -3,14 +3,15 @@
 @import "base/layout";
 @import "base/typography";
 @import "components/button";
+@import "components/contest-tile";
+@import "components/footer";
 @import "components/header";
 @import "components/secondary-nav";
-@import "components/footer";
+@import "components/sponsor-link";
 @import "components/trust-bar";
-@import "components/contest-tile";
+@import "pages/home/featured-contests";
 @import "pages/home/hero";
 @import "pages/home/top-names";
-@import "pages/home/featured-contests";
 
 // CSS Instructions
 // ------------------------------------------------
