finishing up contest tiles, basic contest list page styling

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -12,6 +12,7 @@
 @import "pages/home/featured-contests";
 @import "pages/home/hero";
 @import "pages/home/top-names";
+@import "pages/contests/contests";
 
 // CSS Instructions
 // ------------------------------------------------
