--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -261,7 +261,7 @@ h6 {
 // ------------------------------------------------
 
 .type__subline__s {
-  font-size: $headline-font-size__xs;
+  font-size: $headline-font-size__xxs;
   font-family: $font__default;
   font-weight: 500;
   font-style: normal;
