--- a/src/styles/components/contest-tile.scss
+++ b/src/styles/components/contest-tile.scss
@@ -24,6 +24,11 @@ $contest-tile__background: linear-gradient(
   rgba($color__white, 0.1) 0%,
   rgba($color__white, 0.05) 100%
 );
+$contest-amount__background: linear-gradient(
+  45deg,
+  rgba($color__white, 0.1) 0%,
+  rgba($color__white, 0.05) 100%
+);
 
 .contest-tile {
   margin-bottom: $spacing__m;
@@ -34,56 +39,72 @@ $contest-tile__background: linear-gradient(
   border-radius: $border-radius__m;
 
   @include breakpoint("s") {
-    flex-direction: row;
     margin-bottom: $spacing__l;
   }
 }
 
-// Logo area
-// --------------------
-
-.contest-tile__left-side {
-  padding: $spacing__m $spacing__m 0;
-
-  @include breakpoint("s") {
-    flex-shrink: 0;
-    flex-direction: row;
-    padding: 0;
-    width: $contest-tile__logo-container-width;
-  }
-}
-
-.contest-tile__left-side .sponsor-link {
-  width: $contest-tile__logo-container-width;
-  padding: $spacing__s;
-}
-
-// Content area
-// --------------------
-
-.contest-tile__right-side {
-  flex: 1;
-  border-left: 0;
-  @include breakpoint("s") {
-    border-left: $contest-tile__border;
-  }
-}
-
-.contest-tile__right-top {
-  margin: $spacing__s $spacing__m $spacing__m $spacing__m;
+.contest-tile__top {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column-reverse;
+  padding: 0;
   @include breakpoint("s") {
-    margin: $spacing__m $spacing__l $spacing__l $spacing__l;
+    padding: $spacing__m $spacing__l;
+    flex-direction: row;
+    justify-content: space-between;
   }
+}
+
+.contest-tile__logo-details-wrapper {
+  display: flex;
 }
 
 // Contest amount
 // --------------------
 
 .contest-tile__amount {
+  padding: $spacing__s $spacing__m;
+  background: $contest-amount__background;
+  border-bottom: $contest-tile__border;
+  color: $color__white;
   font-weight: 500;
   text-align: right;
+  @include breakpoint("s") {
+    justify-content: flex-start;
+    padding: 0;
+    background: none;
+    border-bottom: none;
+  }
+}
+
+// Logo area
+// --------------------
+
+.contest-tile__logo {
+  width: calc($contest-tile__logo-container-width * 0.7);
+  margin-right: $spacing__m;
+  @include breakpoint("s") {
+    flex-shrink: 0;
+    padding: 0;
+    width: $contest-tile__logo-container-width;
+  }
+}
+
+.contest-tile__logo .sponsor-link {
+  width: calc($contest-tile__logo-container-width * 0.7);
+  @include breakpoint("s") {
+    width: $contest-tile__logo-container-width;
+  }
+}
+
+// Content area
+// --------------------
+
+.contest-tile__content {
+  display: flex;
+  padding: $spacing__m;
+  @include breakpoint("s") {
+    padding: 0;
+  }
 }
 
 // Contest time
@@ -111,13 +132,61 @@ $contest-tile__background: linear-gradient(
 }
 
 // Contest buttons and live indicator
+// --------------------
 
-.contest-tile__right-bottom {
-  padding: $spacing__s $spacing__m;
+.contest-tile__bottom {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   border-top: $contest-tile__border;
   @include breakpoint("s") {
-    padding: $spacing__s $spacing__l;
+  }
+}
+
+.contest-tile__button-wrapper {
+  display: flex;
+  justify-content: center;
+
+  a {
+    padding: $spacing__s $spacing__m;
+    border-left: $contest-tile__border;
+    color: $color__white;
+
+    &:hover {
+      background: rgba($color__white, 0.1);
+    }
+  }
+}
+
+.contest-tile__status-indicator-text {
+  display: flex;
+  align-items: center;
+  align-self: center;
+  padding: $spacing__s $spacing__m;
+  &:before {
+    content: "";
+    display: inline-block;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    margin-right: $spacing__s;
+    background: $color__white;
+  }
+}
+
+.contest-tile__status-indicator-text--active {
+  color: $color__white;
+  &:before {
+    background: $color__green;
+  }
+}
+
+.contest-tile__status-indicator-text--soon {
+  color: $color__white;
+}
+
+.contest-tile__status-indicator-text--completed {
+  &:before {
+    display: none;
   }
 }
