--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,18 +1,28 @@
 @import "base/reset";
+@import "base/forms";
 @import "base/helper-classes";
 @import "base/layout";
+@import "base/tables";
 @import "base/typography";
 @import "components/button";
 @import "components/contest-tile";
 @import "components/footer";
+@import "components/modal";
 @import "components/header";
 @import "components/secondary-nav";
 @import "components/sponsor-link";
+@import "components/testimonials";
 @import "components/trust-bar";
+@import "pages/contest/contest";
+@import "pages/contests/contests";
+@import "pages/help/help";
 @import "pages/home/featured-contests";
 @import "pages/home/hero";
 @import "pages/home/top-names";
-@import "pages/contests/contests";
+@import "pages/leaderboard/leaderboard";
+@import "pages/login/login";
+@import "pages/report/report";
+@import "pages/reports/reports";
 
 // CSS Instructions
 // ------------------------------------------------
