--- a/src/styles/pages/home/featured-contests.scss
+++ b/src/styles/pages/home/featured-contests.scss
@@ -1,7 +1,7 @@
 @import "../../variables";
 
 // --------------------------------------------------
-// Contest Tile Component
+// Featured Contests
 // --------------------------------------------------
 
 // CSS rule order
