--- a/src/styles/pages/contests/contests.scss
+++ b/src/styles/pages/contests/contests.scss
@@ -1,7 +1,7 @@
 @import "../../variables";
 
 // --------------------------------------------------
-// Contest Tile Component
+// Contest List Page
 // --------------------------------------------------
 
 // CSS rule order
