quick styling for reports list page

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -7,8 +7,9 @@
 @import "components/button";
 @import "components/contest-tile";
 @import "components/footer";
-@import "components/modal";
 @import "components/header";
+@import "components/modal";
+@import "components/report-tile";
 @import "components/secondary-nav";
 @import "components/sponsor-link";
 @import "components/testimonials";
