--- a/src/styles/components/sponsor-link.scss
+++ b/src/styles/components/sponsor-link.scss
@@ -2,7 +2,7 @@
 @import "./contest-tile";
 
 // --------------------------------------------------
-// Contest Tile Component
+// Sponsor Link Component
 // --------------------------------------------------
 
 // CSS rule order
@@ -30,9 +30,9 @@
   img {
     width: 100%;
     height: auto;
-    border-radius: 50%;
     border: $contest-tile__border;
     aspect-ratio: 1/1;
+    border-radius: 50%;
 
     // Styles for when images 404
     line-height: $contest-tile__logo-container-width;
@@ -50,10 +50,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: rgba($color__black, 0.1);
-    color: $color__white;
-    font-size: 3rem;
+    font-size: 1rem;
     font-weight: 300;
-    border-radius: $border-radius__m;
   }
 }
