--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -8,6 +8,7 @@ $color__black: hsl(240, 20%, 1%);
 // Neutral palette
 $color__n-100: hsl(260, 13%, 5%);
 $color__n-90: hsl(251, 16.9%, 12.7%);
+$color__n-85: hsl(251, 16.3%, 12.7%);
 $color__n-80: hsl(251, 15.7%, 20%);
 $color__n-70: hsl(250, 16.4%, 21.6%);
 $color__n-60: hsl(251, 11.6%, 27.1%);
