--- a/src/styles/components/contest-tile.scss
+++ b/src/styles/components/contest-tile.scss
@@ -107,6 +107,7 @@ $contest-amount__background: linear-gradient(
   padding: $spacing__m;
   @include breakpoint("s") {
     padding: 0;
+    max-width: 40rem;
   }
 }
 
