--- a/src/styles/base/tables.scss
+++ b/src/styles/base/tables.scss
@@ -1,13 +1,18 @@
 @import "../variables";
 
 table {
-  width: 100%;
+  margin-bottom: $spacing__l;
+  width: calc(96vw - 2 * #{$spacing__xl});
+  overflow-x: auto;
   color: $color__text;
   background: $color__n-90;
   border: 1px solid $color__n-80;
   font-size: 12pt;
   border-collapse: collapse;
   overflow-x: auto;
+  @include breakpoint("m") {
+    width: 100%;
+  }
 }
 table thead th,
 table tfoot th {
