--- a/src/styles/pages/contest/contest.scss
+++ b/src/styles/pages/contest/contest.scss
@@ -16,3 +16,152 @@
 // 7. Text
 // 8. Transforms
 // 9. Other
+
+.contest-page__top {
+  margin-bottom: $spacing__xxl;
+}
+
+.contest-page__top-bar {
+  margin-bottom: $spacing__s;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: $color__n-90;
+  border-radius: $border-radius__m;
+
+  .contest-tile__status-indicator-text {
+    padding: $spacing__m $spacing__l;
+    border-right: 1px solid $color__n-60;
+  }
+
+  .countdown {
+    //this is the inner div
+    margin-left: $spacing__s;
+    margin-top: $spacing__xxs;
+    font-family: $font__code;
+    font-size: 0.93em;
+  }
+}
+.contest-tile__countdown {
+  display: flex;
+  font-size: $font-size__text;
+  align-items: center;
+  justify-content: center;
+  padding: $spacing__m;
+}
+.contest-page__top-content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: $spacing__l 0;
+  @include breakpoint("s") {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+.contest-page__button-wrapper {
+  margin-top: $spacing__l;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+  flex-shrink: 0;
+  flex-wrap: wrap;
+  a {
+    width: 100%;
+    display: block;
+    margin-bottom: $spacing__s;
+    text-align: center;
+  }
+  @include breakpoint("s") {
+    margin-top: 0;
+    flex-direction: row;
+    align-items: center;
+    a {
+      width: auto;
+      margin-bottom: 0;
+      margin-right: $spacing__s;
+      text-align: left;
+    }
+  }
+  @include breakpoint("m") {
+    flex-direction: row;
+  }
+}
+.contest-page__sponsor {
+  display: flex;
+  flex-grow: 1;
+  align-items: center;
+  @include breakpoint("s") {
+    margin-right: $spacing__xl;
+  }
+
+  h1 {
+    margin: 0 0 $spacing__xs 0;
+  }
+
+  p {
+    margin: 0;
+    font-size: $font-size__text;
+    line-height: 130%;
+  }
+}
+.contest-page__sponsor-link {
+  max-width: 90px;
+  min-width: 50px;
+  margin-right: $spacing__m;
+  @include breakpoint("m") {
+    margin-right: $spacing__l;
+  }
+}
+.contest-page__details-grid {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  @include breakpoint("xs") {
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex-shrink: 0;
+  }
+
+  li {
+    min-width: 45%;
+    padding: $spacing__m;
+    display: flex;
+    flex-direction: column;
+    border-left: 1px solid $color__n-70;
+    font-size: $font-size__text;
+    line-height: 130%;
+    color: $color__n-20;
+
+    @include breakpoint("s") {
+      padding: $spacing__l $spacing__m;
+    }
+    @include breakpoint("m") {
+      min-width: auto;
+    }
+  }
+}
+
+.contest-page__grid-label {
+  font-size: $font-size__text;
+  line-height: 130%;
+  font-weight: 500;
+}
+
+.contest-page__grid-value {
+  color: $color__white;
+  font-weight: 500;
+}
+// Tabs
+// --------------------
+
+.contest-page__tab-container .limited-width {
+  border-top: 3px solid $color__n-90;
+  padding-top: $spacing__m;
+
+  @include breakpoint("s") {
+    padding-top: $spacing__l;
+  }
+}
