--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -21,8 +21,8 @@ $color__n-5: hsl(252, 8.9%, 78%);
 $color__n-2: hsl(0, 0%, 90.2%);
 
 // Blurple palette
-$color__blurple-text: hsl(255, 100%, 69.4%);
-$color__blurple-text-light: hsl(255, 100%, 77.1%);
+$color__blurple__text: hsl(255, 100%, 69.4%);
+$color__blurple__text-light: hsl(255, 100%, 77.1%);
 $color__blurple-90: hsl(255, 80.1%, 60.6%);
 $color__blurple-80: hsl(255, 57.9%, 52.5%);
 $color__blurple-70: hsl(255, 52.1%, 45.9%);
