making reports and contest details nicer

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -103,6 +103,7 @@ $breakpoint__xl: 1920px;
 
 $layout__max-width: 1100px;
 $report__max-width: 900px;
+$contest__max-width: 900px;
 
 // Shadows
 // ------------------------------------------------
