--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -32,53 +32,83 @@
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-}
-.header__nav-links {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: $spacing__l $spacing__l $spacing__l 0;
-  a {
-    word-break: normal;
-  }
-}
-.header__nav-links {
-  display: none;
-
-  & > a {
-    padding: $spacing__s $spacing__s $spacing__s 0;
-    color: $color__white;
-    display: block;
-    width: 100%;
-    &:hover {
-      color: $color__button-blurple;
-    }
-  }
-}
-.header__nav.open .header__nav-links {
-  display: flex;
-}
-.header__nav-buttons {
-  flex-shrink: 0;
-  .button--primary {
-    margin-right: 0;
-  }
-}
-
-@include breakpoint("m") {
-  .header__nav {
+  @include breakpoint("m") {
     flex-wrap: nowrap;
     justify-content: space-between;
   }
-  .header__nav-links {
+}
+.header__logo-and-burger {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  @include breakpoint("m") {
+    width: auto;
+  }
+}
+.header__nav-links {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: $spacing__l 0;
+
+  margin-bottom: $spacing__l;
+  padding-bottom: $spacing__l;
+  border-bottom: 1px solid $color__n-60;
+
+  @include breakpoint("m") {
+    margin-bottom: 0;
+    padding-bottom: 0;
+    border-bottom: none;
+  }
+
+  @include breakpoint("m") {
     padding: 0;
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: flex-end;
     & > a {
       padding: $spacing__s;
       margin: 0 $spacing__s;
     }
+  }
+  a {
+    word-break: normal;
+  }
+  display: none;
+
+  & > a {
+    width: 100%;
+    padding: $spacing__s $spacing__s $spacing__s 0;
+    color: $color__white;
+    display: block;
+    &:hover {
+      color: $color__button-blurple;
+    }
+
+    @include breakpoint("m") {
+      width: auto;
+    }
+  }
+}
+.header__nav.open {
+  .header__nav-links {
+    display: flex;
+  }
+}
+.header__nav-buttons {
+  flex-shrink: 0;
+  margin-top: $spacing__l;
+  display: block;
+  .button--primary {
+    margin-right: 0;
+  }
+
+  @include breakpoint("m") {
+    margin-top: 0;
   }
 }
 
