--- a/src/styles/pages/contests/contests.scss
+++ b/src/styles/pages/contests/contests.scss
@@ -18,7 +18,7 @@
 // 8. Transforms
 // 9. Other
 
-.contests-page section {
+.contests-page section:not(:first-child) {
   padding: $spacing__l 0;
 }
 
