--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -19,10 +19,7 @@
 
 $button__border-width: 2px;
 
-// Button primary
-// --------------------
-
-// Mixin for the white button style --white
+// Mixins for the white button styles
 // --------------------
 
 @mixin button--white {
@@ -40,9 +37,8 @@ $button__border-width: 2px;
 
 @mixin button--secondary--white {
   background: transparent;
-  border: 2px solid $color__white;
+  border: 2px solid rgba($color__white, 0.8);
   color: rgba($color__white, 0.8);
-  border-color: rgba($color__white, 0.8);
 
   // TODO better hover styling for white buttons
   &:hover {
@@ -51,6 +47,10 @@ $button__border-width: 2px;
     border-color: $color__white;
   }
 }
+
+// Button primary
+// --------------------
+
 .button--primary,
 .button {
   padding: $spacing__s $spacing__l;
@@ -93,8 +93,7 @@ $button__border-width: 2px;
 
 .button--secondary {
   background: transparent;
-  border: 2px solid $color__button-blurple;
-  border-color: $color__button-blurple;
+  border: $button__border-width solid $color__button-blurple;
   color: $color__white;
 
   &:hover {
@@ -110,5 +109,30 @@ $button__border-width: 2px;
 .background--low-contrast {
   .button--secondary {
     @include button--secondary--white;
+  }
+}
+
+// Button tertiary
+// --------------------
+
+.button--tertiary {
+  padding: $spacing__s $spacing__l;
+  display: inline-flex;
+  background: transparent;
+  border: $button__border-width solid transparent;
+  border-radius: $border-radius__m;
+  color: $color__white;
+
+  &::after {
+    content: "\00a0→";
+    display: inline-block;
+  }
+
+  &:hover {
+    @include accessible-animation {
+      transition: $transition__base;
+    }
+    border-color: $color__button-blurple;
+    color: $color__white;
   }
 }
