--- a/src/styles/pages/home/top-names.scss
+++ b/src/styles/pages/home/top-names.scss
@@ -19,34 +19,59 @@
 
 .hero__top-auditors {
   margin-top: $spacing__xl;
-  padding: $spacing__l 0;
+  padding: $spacing__l 0 $spacing__xl;
   background: $color__n-90;
 
   @include breakpoint("s") {
     margin-top: $spacing__xxxl;
   }
-  ul {
-    margin: $spacing__xl 0 0;
-    padding: 0;
-    list-style: none;
+}
+.hero__top-auditors-list {
+  margin: $spacing__xl 0 0;
+  padding: 0;
+  list-style: none;
+}
+.hero__top-auditor,
+.hero__top-auditors-list li {
+  font-size: $font-size__copy;
+  color: $color__n-5;
+  margin: 0 $spacing__xs $spacing__xs 0;
+  display: inline-block;
 
-    li {
-      font-size: $font-size__copy;
-      color: $color__n-5;
-      margin: 0 $spacing__xs $spacing__xs 0;
-      display: inline-block;
-      background: $color__n-80;
-      padding: $spacing__s $spacing__m;
-      border-radius: $border-radius__m;
-
-      @include breakpoint("s") {
-        font-size: $headline-font-size__xxs;
-        margin: 0 $spacing__s $spacing__s 0;
-      }
-
-      &:last-of-type {
-        // background: none;
-      }
-    }
+  @include breakpoint("s") {
+    font-size: $headline-font-size__xxs;
+    margin: 0 $spacing__s $spacing__s 0;
   }
+
+  &:last-of-type {
+    // background: none;
+  }
+}
+.hero__top-auditor-name {
+  padding: calc($spacing__s + 1px) calc($spacing__m + 1px); // TODO: I mean this does work but it's unpleasant to look at
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background: $color__n-80;
+  border-radius: $border-radius__m;
+  color: $color__n-5;
+}
+a.hero__top-auditor-name {
+  &:hover {
+    @include accessible-animation {
+      transition: $transition__base;
+    }
+    background: $color__blurple-80;
+    color: $color__white;
+  }
+}
+
+.hero__top-auditor-link-arrow {
+  margin-left: $spacing__s;
+}
+
+.hero__top-auditors-list .button--tertiary {
+  display: inline-flex;
+  font-size: $font-size__copy;
+  padding: $spacing__s $spacing__m;
 }
