starting forms, made errors accessible

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -6,6 +6,7 @@
 @import "base/typography";
 @import "components/button";
 @import "components/contest-tile";
+@import "components/dropdown";
 @import "components/footer";
 @import "components/header";
 @import "components/modal";
